# classic-invaders-1.0

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README-SDL  README.cygwin  README.md  aclocal.m4  configure  configure.ac
m4/: boost.m4
src/: Makefile.am  Makefile.in  alien.cpp  alien.h  bonus_ship.cpp  bonus_ship.h  explosion.h  game.cpp  game.h  game_entity.cpp  game_entity.h  main.cpp  player.cpp  player.h  rand_num_gen.h  screen.h  shield_piece.h  shot.cpp  shot.h  sound.cpp  sound.h  status.cpp  status.h  ttf.cpp  ttf.h  ui.cpp  ui.h
